--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@ hello js rocket
 
 <script type="text/javascript">
 
-	console.log('hello there friend!')
+	console.log('hello there friends!');
 
 </script>
